--- a/web-farm/package.json
+++ b/web-farm/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "fabric": "^6.4.2",
+    "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
