--- a/web-farm/package.json
+++ b/web-farm/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@react-spring/web": "^9.7.5",
     "@react-three/drei": "^9.114.0",
-    "@react-three/fiber": "^8.17.9",
+    "@react-three/fiber": "^8.17.10",
     "@tanstack/react-query": "^5.59.0",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
