--- a/web-farm/package.json
+++ b/web-farm/package.json
@@ -17,6 +17,7 @@
     "@react-spring/web": "^9.7.5",
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.10",
+    "@swc/core": "^1.9.1",
     "@tanstack/react-query": "^5.59.0",
     "@tremor/react": "^3.18.3",
     "aos": "^2.3.4",
