--- a/web-farm/package.json
+++ b/web-farm/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.454.0",
     "openweathermap-ts": "^1.2.10",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
